--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -10,19 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4  # Updated to latest version
+        uses: actions/checkout@v4  # Latest version
 
       - name: Generate Snake Animation
-        uses: Platane/snk@v4
+        uses: Platane/snk@master  # Updated version
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg
+
+      - name: Ensure dist directory exists
+        run: mkdir -p dist
 
       - name: Check if Snake SVG exists
         run: ls -l dist/
 
       - name: Upload the Snake Animation
-        uses: actions/upload-artifact@v4  # Updated to v4
+        uses: actions/upload-artifact@v4  # Latest version
         with:
           name: snake
           path: dist/snake.svg
@@ -37,6 +40,5 @@ jobs:
           git pull origin main --rebase  # Ensure the branch is up to date
           git add dist/snake.svg
           git commit -m "Generated snake animation"
-          git push
-
+          git push --force
 
